[ios] Respect the safe area when presenting table view bubbles.

BUG=862255
TEST=On iPhoneX, rotate into landscape and open the Bookmarks.  The bubble should not overlap with the notch, in both LTR and RTL languages.

Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I07c2215e7b3b6e01ee8e39cae6d03054199cb205
Reviewed-on: https://chromium-review.googlesource.com/1140195
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575656}
Former-commit-id: 44e3acd125853602fefa92ec01d9fb7394390d1a